@@ -147,6 +147,7 @@
   [#30669] Improve comment in stdiodemo
   [#30735] bug in example twitest
   [#31086] ATTINY88 RAMEND value not set to correct value in iotn88.h
+  [#30363] _delay_xx() functions in <util/delay.h> are broken
 
 * Other changes:
 
